--- a/src/index.html
+++ b/src/index.html
@@ -51,25 +51,29 @@
                         </div>
                     </div>
 
-                    <div class="py-3 collapse multi-collapse" id="optionsCollapse">
-                        <div class="form-group row">
-                            <label class="col-sm-6 col-form-label">Aktuelles Vermögen:</label>
-                            <div class="col-sm-6">
-                                <input type="password" class="form-control" id="input-vermoegen" placeholder="0€">
+                    <div class="collapse multi-collapse" id="optionsCollapse">
+                        <div style="padding-top: 15px; padding-bottom: 0;">
+                            <div class="form-group row">
+                                <label class="col-sm-6 col-form-label">Aktuelles Vermögen:</label>
+                                <div class="col-sm-6">
+                                    <input type="password" class="form-control" id="input-vermoegen" placeholder="0€">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-sm-6 col-form-label">Jährliche Rendite:</label>
-                            <div class="col-sm-6">
-                                <input type="password" class="form-control" id="input-rendite" placeholder="5%">
+                            <div class="form-group row">
+                                <label class="col-sm-6 col-form-label">Jährliche Rendite:</label>
+                                <div class="col-sm-6">
+                                    <input type="password" class="form-control" id="input-rendite" placeholder="5%">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-sm-6 col-form-label">Entnahmerate (SWR):</label>
-                            <div class="col-sm-6">
-                                <input type="password" class="form-control" id="inputswr" placeholder="4%">
+                            <div class="form-group row">
+                                <label class="col-sm-6 col-form-label">Entnahmerate (SWR):</label>
+                                <div class="col-sm-6">
+                                    <input type="password" class="form-control" id="inputswr" placeholder="4%">
+                                </div>
                             </div>
+
                         </div>
+
                     </div>
 
                 </form>
