added label for xAxis

--- a/src/stacked.html
+++ b/src/stacked.html
@@ -131,6 +131,12 @@
                     labelString: 'Net worth'
                   },
                     stacked: true
+                }],
+                xAxes: [{
+                  scaleLabel: {
+                    display: true,
+                    labelString: 'Year'
+                  }
                 }]
               }
             }
